<resources>
    <string name="app_name">Hospice Router</string>
    <!--  -->
    <string name="action_sign_in_short">Register</string>
    <string name="action_sign_in_long">Register Organization</string>
    <string name="email">Email</string>
    <string name="subscription_period_monthly">Monthly $99.90</string>
    <string name="hint_email">Email</string>
    <string name="subscription_period_prompt">Select your subscription period</string>
    <string name="subscription_resignup_prompt">To reactivate your subscription, select your subscription period</string>
    <string name="subscription_prompt_continue">Continue</string>
    <string name="subscription_prompt_cancel">Cancel</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="employee_name">Name</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_patient_name">Patient Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_view_users">User info</string>
    <string name="organization_hint">Organization Name</string>
    <string name="btn_link_to_register">Not a member? Register now!</string>
    <string name="btn_link_to_register_company">New organization? Register as organization now!</string>
    <string name="company_name">Organization Name</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">Back</string>
    <string name="hint_patient_address">Patient Address</string>
    <string name="hint_patient_comments">Patient Comments</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="search_hint">Search Location</string>
    <string name="prompt_password">Enter Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="access_token" translatable="false">pk.eyJ1IjoiY2hhemRldmVsb3BlciIsImEiOiJjampwaDdpN3EwMGlzM2twbnpjcmRqMHMzIn0.8bgS53xlCZsJC5iZrbLOhQ</string>
    <string name="title_activity_navagation">NavagationActivity</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_userinfo">UserinfoActivity</string>
    <string name="title_activity_more">MoreActivity</string>
    <string name="privacy_policy">Privacy Policy\n\n
     Chaz Hampton built the Hospice Router app as a Freemium app. This SERVICE is provided by Chaz Hampton at no cost and is intended for use as is.\n   
     \n   
     This page is used to inform website visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.\n   
     \n   
     If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.\n   
     \n   
     The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at hospiceRouter unless otherwise defined in this Privacy Policy.\n   
     \n   
     Information Collection and Use\n   
     \n   
     For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information, including but not limited to Patient name, Patient address, User password, User name, User email, User location. The information that I request is retained on your device and is not collected by me in any way\n   
     \n   
     The app does use third party services that may collect information used to identify you.\n   
     \n   
     Link to privacy policy of third party service providers used by the app\n   
     \n   
     Google Play Services\n   
     Firebase Analytics\n   
     Log Data\n   
     \n   
     I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.\n   
     \n   
     Cookies\n   
     \n   
     Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device’s internal memory.\n   
     \n   
     This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.\n   
     \n   
     Service Providers\n   
     \n   
     I may employ third-party companies and individuals due to the following reasons:\n   
     \n   
     To facilitate our Service;\n   
     To provide the Service on our behalf;\n   
     To perform Service-related services; or\n   
     To assist us in analyzing how our Service is used.\n   
     I want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.\n   
     \n   
     Security\n   
     \n   
     I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.\n   
     \n   
     Links to Other Sites\n   
     \n   
     This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.\n   
     \n   
     Children’s Privacy\n   
     \n   
     These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions.\n   
     \n   
     Changes to This Privacy Policy\n   
     \n   
     I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.\n   
     \n   
     Contact Us\n   
     \n   
     If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at chaz.developer@gmail.com.\n
     \n   
     This privacy policy page was created at privacypolicytemplate.net and modified/generated by App Privacy Policy Generator</string>
</resources>
